cabal-version:      2.4
name:               plutus-contracts
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
license-files: LICENSE
author:             Your name
maintainer:         Your email

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library
    exposed-modules:
      Platinum.Contracts.YieldFarming.Constants
      Platinum.Contracts.YieldFarming.OnChain
      Platinum.Contracts.YieldFarming.Types
      Platinum.Contracts.Utils
    build-depends:
      base >= 4.9 && < 5,
      aeson,
      bytestring,
      containers,
      freer-extras,
      playground-common,
      plutus-contract,
      plutus-tx-plugin,
      plutus-tx,
      plutus-ledger,
      plutus-ledger-api
    hs-source-dirs: src examples/src
    default-language: Haskell2010
    ghc-options:
            -- See Plutus Tx readme
            -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

test-suite plutus-contracts-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: examples/test
  default-language: Haskell2010
  ghc-options: -Wall -Wnoncanonical-monad-instances
              -Wincomplete-uni-patterns -Wincomplete-record-updates
              -Wredundant-constraints -Widentities -rtsopts
              -- See Plutus Tx readme
              -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
  build-depends:
    plutus-tx -any,
    plutus-tx-plugin,
    plutus-contract -any,
    plutus-ledger -any,
    plutus-contracts -any
  build-depends:
    base >=4.9 && <5,
    tasty -any,
    tasty-hunit -any,
    tasty-hedgehog >=0.2.0.0