cabal-version:      2.4
name:               plutus-contracts
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
license-files: LICENSE
author:             Your name
maintainer:         Your email

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library
    exposed-modules:
      Platinum.Contracts.YieldFarming.Traces.Trace1
      Platinum.Contracts.YieldFarming.Traces.Trace2
      Platinum.Contracts.YieldFarming.Env
      Platinum.Contracts.YieldFarming.OnChain
      Platinum.Contracts.YieldFarming.OffChain
      Platinum.Contracts.Utils
    build-depends:
      base >= 4.9 && < 5,
      aeson,
      bytestring,
      containers,
      freer-extras,
      playground-common,
      plutus-contract,
      plutus-tx-plugin,
      plutus-tx,
      plutus-ledger,
      plutus-ledger-api,
      plutus-use-cases,
      text
    hs-source-dirs: src
    default-language: Haskell2010
    default-extensions:
      AllowAmbiguousTypes
      DataKinds
      DeriveAnyClass
      DeriveGeneric
      DeriveTraversable
      DerivingStrategies
      FlexibleContexts
      FlexibleInstances
      GADTs
      KindSignatures
      LambdaCase
      MultiParamTypeClasses
      NoImplicitPrelude
      OverloadedStrings
      PartialTypeSignatures
      RecordWildCards
      ScopedTypeVariables
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      ViewPatterns
    ghc-options:
            -- See Plutus Tx readme
            -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
            -Weverything
            -Wall
            -Wno-missing-export-lists
            -Wno-missing-exported-signatures
            -Wno-missing-import-lists
            -Wno-missed-specialisations
            -Wno-all-missed-specialisations
            -Wno-unsafe
            -Wno-safe
            -Wno-missing-local-signatures
            -Wno-monomorphism-restriction
            -Wno-implicit-prelude
            -Wno-prepositive-qualified-module
            -Wno-missing-safe-haskell-mode
            -Wno-unused-packages